# local_server

./: README.md  create_database.py  fake_data.py  file.csv  jsondata.json  local_server.py  request_to_restapi.py  setup.cfg  test_CRUD.py  test_fakeDB.py
src/csv_to_db_package/: crud_operations_db.py  csv_to_db.py
src/csv_to_db_yogeshwar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
