[metadata]
name = csv_to_db-yogeshwar
version = 0.0.1
author = yogeshwar reddy
author_email = yogeshwarreddy905@gmail.com
description = A package for generating data and converting it into different formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yogeshwarreddy13/local_server
project_urls =
    Bug Tracker = https://github.com/yogeshwarreddy13/local_server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src